Design review fixes (#135)
* make expanded panels scroll page to top

* adjust scrollbar styling

* update console icons

* update entryStyles with hover and pointer effect

* make whole entry clickable to expand

* add bottom border to log filters

* reduce gap between network filter buttons

* add scrollbar styling for firefox

* update stacktrace font color

* lint fix

--- a/src/components/DevTools/ConsolePanel/components/LogEntry/LogEntry.module.scss
+++ b/src/components/DevTools/ConsolePanel/components/LogEntry/LogEntry.module.scss
@@ -64,4 +64,6 @@
     margin-right: 4px;
     display: flex;
     align-items: center;
+    height: 12px;
+    width: 12px;
 }
