--- a/src/components/DevTools/ConsolePanel/components/LogFilters/LogFilters.module.scss
+++ b/src/components/DevTools/ConsolePanel/components/LogFilters/LogFilters.module.scss
@@ -4,6 +4,7 @@
     flex-wrap: wrap;
     padding: 8px 24px;
     width: 100%;
+    border-bottom: 1px solid var(--primary-base-300, #262a32);
 }
 
 .toggleButtons {
