--- a/src/components/DevTools/Network/Network.module.scss
+++ b/src/components/DevTools/Network/Network.module.scss
@@ -24,7 +24,7 @@
 
 .inlineWrapper {
     display: flex;
-    gap: 15px;
+    gap: 8px;
 }
 
 .filters {
