--- a/src/components/FrameworkError/FrameworkError.module.scss
+++ b/src/components/FrameworkError/FrameworkError.module.scss
@@ -43,6 +43,7 @@
 
 .stackMessage {
     white-space: pre-line;
+    color: var(--primary-base-200, #9fa8b6);
 }
 
 .chevron {
